third_party/move/move-compiler-v2/tests/checking/typing/v1-naming/vector_literal_type_arity.exp

Diagnostics:
error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/typing/v1-naming/vector_literal_type_arity.move:4:18
  │
4 │         let v0 = vector<>[];
  │                  ^^^^^^

error: expected 1 type argument but 2 were provided
  ┌─ tests/checking/typing/v1-naming/vector_literal_type_arity.move:5:18
  │
5 │         let v2 = vector<u64, bool>[0, false];
  │                  ^^^^^^
